--- a/styles.css
+++ b/styles.css
@@ -263,16 +263,43 @@ footer {
     justify-content: center;
     align-items: center;
     overflow:hidden;
+    border-color: #333;
+    border-style: solid;
 }
 
 .banner-slide {
     display: flex;
     gap: 30px;
     align-items: center;
+    justify-content: center;
+
 }
 
 .banner-slide img {
-    height: 40px;
+    filter: grayscale(80%); /* Converts images to black and white */
+    height: 40px; /* Adjust size as needed */
+    transition: filter 0.3s ease; /* Smooth transition for hover effect */
+}
+
+.banner-slide img:hover {
+    filter: grayscale(0%); /* Removes grayscale on hover for focus effect */
+}
+
+.banner-text {
+    color: #fff; /* White text */
+    font-size: 1rem; /* Adjust text size as needed */
+    text-transform: uppercase; /* Optional: Capitalize text */
+    margin: 0 10px; /* Space between text items */
+    font-weight: bold;
+}
+
+.dot {
+    display: inline-block;
+    width: 5px; /* Adjust size as needed */
+    height: 5px; /* Adjust size as needed */
+    background-color: green; /* Change color as needed */
+    border-radius: 50%; /* Makes it a circle */
+    margin: 0 5px; /* Space around the dot */
 }
 
 .logo {
