--- a/styles.css
+++ b/styles.css
@@ -265,24 +265,26 @@ footer {
     overflow:hidden;
     border-color: #333;
     border-style: solid;
+    position:relative;
 }
 
 .banner-slide {
     display: flex;
-    gap: 30px;
+    /* gap: 30px; */
     align-items: center;
     justify-content: center;
+    animation: slide 10s linear infinite; /* Match the duration in JS */
 
 }
 
 .banner-slide img {
-    filter: grayscale(80%); /* Converts images to black and white */
+    /* filter: grayscale(80%); /* Converts images to black and white */
     height: 40px; /* Adjust size as needed */
-    transition: filter 0.3s ease; /* Smooth transition for hover effect */
+    /* transition: filter 0.3s ease; /* Smooth transition for hover effect */
 }
 
 .banner-slide img:hover {
-    filter: grayscale(0%); /* Removes grayscale on hover for focus effect */
+    /* filter: grayscale(0%); /* Removes grayscale on hover for focus effect */
 }
 
 .banner-text {
@@ -293,13 +295,24 @@ footer {
     font-weight: bold;
 }
 
+@keyframes slide {
+    0% {
+        transform: translateX(0); /* Start at the beginning */
+    }
+    100% {
+        transform: translateX(-100%); /* Move to the left by 100% of its width */
+    }
+}
+
+
+
 .dot {
     display: inline-block;
     width: 5px; /* Adjust size as needed */
     height: 5px; /* Adjust size as needed */
     background-color: green; /* Change color as needed */
     border-radius: 50%; /* Makes it a circle */
-    margin: 0 5px; /* Space around the dot */
+    margin: 0 20px; /* Space around the dot */
 }
 
 .logo {
