--- a/styles.css
+++ b/styles.css
@@ -236,6 +236,8 @@ header {
     max-width: 90%;  /* Increased from 60% for mobile */
 }
 
+
+
 /* Gold */
 .gold {
     color: gold;
@@ -408,8 +410,16 @@ headerTitle {
 
 .case-studies h2 {
     text-align: center;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
     font-size: 2.5rem;
+}
+
+.case-studies h3 {
+    font-size: 1.5rem;  /* Slightly smaller than h2 */
+    margin-bottom: 3rem;
+    text-align: center;
+    font-weight: 400;
+    
 }
 
 .case-studies-grid {
