--- a/styles.css
+++ b/styles.css
@@ -551,6 +551,7 @@ headerTitle {
 }
 
 .case-study-image {
+    position: relative;
     width: 100%;
     height: 200px;
     overflow: hidden;
@@ -560,6 +561,26 @@ headerTitle {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.case-study-image.has-video .service-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0;
+    transition: opacity 0.2s ease;
+    pointer-events: none;
+}
+
+.case-study-image.has-video.video-active .service-video {
+    opacity: 1;
+}
+
+.case-study-image.has-video.video-active .service-thumb {
+    opacity: 0;
 }
 
 .case-study-content {
