--- a/styles.css
+++ b/styles.css
@@ -727,10 +727,11 @@ headerTitle {
 
 .case-study-image.has-video .service-video {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 130%;
+    height: 130%;
     object-fit: cover;
     opacity: 0;
     transition: opacity 0.2s ease;
